--- a/exercicio-ponto-tur/exerc-ponto-tur.html
+++ b/exercicio-ponto-tur/exerc-ponto-tur.html
@@ -9,34 +9,30 @@
 </head>
 <body>
     <br>
+    <div class="card">
     <h1>A pacata Sumé!</h1>
-    <section class="part1" >
     <br>
-    <img src="./img-exercicio-ponto-turistico/carnauba.jpg">
+    <img src="./img-exercicio-ponto-turistico/carnauba.jpg" width="800px">
     <p>Sumé é uma cidade do interior do Estado da Paraíba, situada no extremo Cariri. <br/>
     Sumé tem apenas 16 mil habitantes, e conta com uma rica culinária nordestina. <br>
     Dentre os pratos típicos, destacam-se o sarapatel, a buchada de bode e o delicioso arrumadinho de tripa.</p>
-    <img class="mapa" src="./img-exercicio-ponto-turistico/Brazil_Paraíba_Sumé_location_map.svg.png">
-    <img class="mapa" src="./img-exercicio-ponto-turistico/sume-mapa.jfif">
-    </section>
+    <img src="./img-exercicio-ponto-turistico/Brazil_Paraíba_Sumé_location_map.svg.png" width="800px">
+    <br/>
+    <img src="./img-exercicio-ponto-turistico/sume-mapa.jfif" width="800px">
     <br>
-    <section class="part2">
     <p>Dentre os pontos turísticos, o letreiro da cidade é o endereço preferido de moradores e turistas!
     <br/>
     Ele fica no alto da Serra, e permite contemplar a vista de toda a cidade.
     </p>
-    <img src="./img-exercicio-ponto-turistico/pessoas-letreiro.jpeg">
-    </section>
+    <img src="./img-exercicio-ponto-turistico/pessoas-letreiro.jpeg" width="800px">
     <br>
-    <section class="part3">
-    <p> Experimente passear por Sumé, sem sair de casa!<br>
-        Apenas clicando abaixo:
+    <p> Experimente passear por Sumé, sem sair de casa!
+    <br>
+    Apenas clicando abaixo:
     </p>
     <a href="https://www.google.com/maps/@-7.6714417,-36.8781591,3a,75y,352.26h,85.41t/data=!3m6!1e1!3m4!1sgpUK_w1xU5ihsarXU14rJw!2e0!7i13312!8i6656?hl=pt-BR"><button>Tour Virtual</button></a>
-    <br>
     <br/>
-    <img src="http://1.bp.blogspot.com/-zsphkyTAojc/Ua5G29F6XZI/AAAAAAAAA2I/7LpQxVPVEWI/s1600/cordel-02.jpg">
-</section>
+</div>>
 </body>
 <footer>
     <hr/>
