Desafio do Blog usando Cards

--- a/exercicio-blog-cards/exercicio-blog-cards.html
+++ b/exercicio-blog-cards/exercicio-blog-cards.html
@@ -20,6 +20,57 @@ https://coolors.co/
     <link rel="stylesheet" href=exercicio-blog-cards.css />
 </head>
 <body>
-    
+    <h1>.Retrofuturismo</h1>
+    <div class="flex-container">
+    <div class="container-flex1">
+      <h3>Ruptura</h3>
+      <img src="https://br.web.img3.acsta.net/r_1920_1080/pictures/22/04/28/13/51/3690686.jpg" width="500px">
+      <p>
+        Em Ruptura, cinco funcionários de uma empresa chamada Lumen aceitam participar de um procedimento experimental onde suas memórias pessoais e de trabalho são permanentemente separadas. Quando estão no escritório, só terão as lembranças referentes ao trabalho e em casa, não lembraram das situações profissionais. Mas por trás desse estranho procedimento, se escondem vários segredos obscuros que a empresa quer manter guardados.
+      </p>
+      <br>
+      <button>Drama/Suspense</button>
+      <br/>
+      <button>2022</button>
+      <br/>
+      <button>EUA</button>
+      <br/>
+      <button>Apple TV</button>
+      <br>
+    </div>
+    <div class="container-flex2">
+      <h3>Vivariun</h3>
+      <img src="https://br.web.img3.acsta.net/r_1920_1080/pictures/20/01/27/12/27/5354105.jpg" width="600px">
+      <p>
+        Enquanto procuram pela casa ideal para que possam morar juntos, um casal se vê preso em um complicado labirinto feito de moradas idênticas entre si. Quando eles percebem que o local não é nada do que imaginavam, pode ser tarde demais.
+      </p>
+      <br>
+      <button>Suspense/Ficção Científica</button>
+      <br/>
+      <button>2019</button>
+      <br/>
+      <button>Irlanda</button>
+      <br/>
+      <button>Amazon Prime</button>
+      <br>
+    </div>
+    <div class="container-flex3">
+      <h3>Black Mirror</h3>
+      <img src="https://br.web.img3.acsta.net/r_1920_1080/pictures/16/08/19/09/31/073960.jpg" width="500px">
+      <p>
+        "Nosedive" é o primeiro episódio da terceira temporada da série antológica de ficção científica britânica Black Mirror. O episódio se passa em um futuro onde uma menina se torna impopular na mídia social. 
+        Black Mirror explora sensações do mal-estar contemporâneo, onde cada episódio conta uma história diferente, traçando uma antologia que mostra o outro lado da vida atrelada à tecnologia.
+      </p>
+      <br>
+      <button>Suspense/Ficção Científica/Drama</button>
+      <br/>
+      <button>2016</button>
+      <br/>
+      <button>Reino Unido</button>
+      <br/>
+      <button>Netflix</button>
+      <br>
+    </div>
+  </div>
 </body>
 </html>
